--- a/AcamicaCourseApp/Base.lproj/Main.storyboard
+++ b/AcamicaCourseApp/Base.lproj/Main.storyboard
@@ -74,12 +74,12 @@
         <scene sceneID="UNs-Rp-UNA">
             <objects>
                 <tableViewController id="Xid-xm-PUA" customClass="MenuTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="6v7-eJ-NTh">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="6v7-eJ-NTh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableViewCellIdentifier" rowHeight="101" id="VCe-hL-prl" customClass="FoodTableViewCell" customModule="AcamicaCourseApp">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableViewCellIdentifier" rowHeight="101" id="VCe-hL-prl" customClass="MyFoodTableViewCell">
                                 <rect key="frame" x="0.0" y="28" width="375" height="101"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="VCe-hL-prl" id="IGU-3J-6Hm">
@@ -104,7 +104,7 @@
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rFg-g5-nKv">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rFg-g5-nKv">
                                                             <rect key="frame" x="0.0" y="29.5" width="264.5" height="55"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
@@ -115,6 +115,7 @@
                                             </subviews>
                                         </stackView>
                                     </subviews>
+                                    <color key="backgroundColor" red="0.90888721449999998" green="0.90888721449999998" blue="0.90888721449999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstItem="ckt-Bk-vKP" firstAttribute="leading" secondItem="IGU-3J-6Hm" secondAttribute="leading" constant="8" id="BE3-vC-fxh"/>
                                         <constraint firstAttribute="bottom" secondItem="gj2-1W-jo1" secondAttribute="bottom" constant="8" id="GU5-w9-ZLT"/>
@@ -127,9 +128,9 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="thisIsADescriptionLabel" destination="rFg-g5-nKv" id="XyA-bT-bBX"/>
-                                    <outlet property="thisIsAPhotoImageView" destination="GCU-Yc-mh1" id="Ntk-nK-qY9"/>
-                                    <outlet property="thisIsATitleLabel" destination="xMp-kC-Tez" id="VU0-58-gX8"/>
+                                    <outlet property="foodDescription" destination="rFg-g5-nKv" id="qTO-KW-eaf"/>
+                                    <outlet property="foodImage" destination="GCU-Yc-mh1" id="wEk-EO-QPd"/>
+                                    <outlet property="title" destination="xMp-kC-Tez" id="Dfh-9i-W5S"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -147,33 +148,69 @@
             </objects>
             <point key="canvasLocation" x="-527.20000000000005" y="796.55172413793105"/>
         </scene>
-        <!--Item-->
-        <scene sceneID="Moo-Wd-XCV">
+        <!--Collection list-->
+        <scene sceneID="vJw-6a-q1b">
             <objects>
-                <viewController id="M26-6X-0pc" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="mLn-r1-aGx">
+                <collectionViewController id="GRd-be-zu5" customClass="MenuCollectionViewController" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="lzo-XT-3N2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="COME AT ME BRO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rdn-BC-vnE">
-                                <rect key="frame" x="117" y="308.5" width="141" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="Rdn-BC-vnE" firstAttribute="centerX" secondItem="CKK-6T-0dh" secondAttribute="centerX" id="XnO-Tg-U3c"/>
-                            <constraint firstItem="Rdn-BC-vnE" firstAttribute="centerY" secondItem="CKK-6T-0dh" secondAttribute="centerY" id="mHb-Tf-Nnx"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="CKK-6T-0dh"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="RmW-w7-Gdu"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ksu-UU-NLS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="nlB-5a-Nca">
+                            <size key="itemSize" width="169" height="191"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCellIdentifier" id="mgl-YP-cWG" customClass="MyFoodCollectionViewCell">
+                                <rect key="frame" x="0.0" y="0.0" width="169" height="191"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="169" height="191"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="eZt-zn-Dgl">
+                                            <rect key="frame" x="20" y="20" width="184" height="216"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Wx5-sC-HWv">
+                                                    <rect key="frame" x="0.0" y="0.0" width="169" height="169"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="Wx5-sC-HWv" secondAttribute="height" multiplier="1:1" id="I28-t8-Rgq"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9sm-Ws-evw">
+                                                    <rect key="frame" x="0.0" y="177" width="169" height="14"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="eZt-zn-Dgl" firstAttribute="top" secondItem="mgl-YP-cWG" secondAttribute="top" id="BdQ-kR-3Lh"/>
+                                    <constraint firstItem="eZt-zn-Dgl" firstAttribute="leading" secondItem="mgl-YP-cWG" secondAttribute="leading" id="TXi-OX-EDm"/>
+                                    <constraint firstAttribute="trailing" secondItem="eZt-zn-Dgl" secondAttribute="trailing" id="W6I-Az-6ic"/>
+                                    <constraint firstAttribute="bottom" secondItem="eZt-zn-Dgl" secondAttribute="bottom" id="hGo-lJ-9P2"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="foodImage" destination="Wx5-sC-HWv" id="35x-Vg-p3h"/>
+                                    <outlet property="title" destination="9sm-Ws-evw" id="PcE-HH-cjJ"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="GRd-be-zu5" id="Mch-rT-ILq"/>
+                            <outlet property="delegate" destination="GRd-be-zu5" id="cPM-6v-rvb"/>
+                        </connections>
+                    </collectionView>
+                    <tabBarItem key="tabBarItem" title="Collection list" id="qRH-TE-Qa5"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="n3l-dm-wEK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="364" y="797"/>
+            <point key="canvasLocation" x="364" y="796.55172413793105"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="SIG-YJ-pXi">
@@ -181,13 +218,14 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="YLM-65-b5D" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="04j-us-F1M">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="ri8-Cz-7Yr"/>
-                        <segue destination="M26-6X-0pc" kind="relationship" relationship="viewControllers" id="gKW-a2-UBp"/>
                         <segue destination="Xid-xm-PUA" kind="relationship" relationship="viewControllers" id="PPi-c8-9cJ"/>
+                        <segue destination="GRd-be-zu5" kind="relationship" relationship="viewControllers" id="Ni4-uM-s9W"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gP8-Bh-USM" userLabel="First Responder" sceneMemberID="firstResponder"/>
